# tinyllama-inference-engine

./: .gitignore  .gitleaks.toml  .gitleaksignore  .mise.toml  AGENTS.md  CMakeLists.txt  CMakePresets.json  PLAN.md  README.md  pyproject.toml
.github/workflows/: cpu-ci.yml
app/: batch_benchmark.cu  cuda_reference.cu  reference_cli.cpp  server.cpp
benchmarks/: kernel_benchmarks.cu
benchmarks/evidence/: 20260720-rtx3080-m5-summary.json  20260720-rtx3080-m5-summary.md
config/: model_manifest.json
data/golden/: operators.json  tokenizer_cases.json
docs/: portfolio-overview.md
docs/adr/: 0001-m1-reference-and-weight-format.md  0002-m2-fp16-cuda-contracts.md  0003-m3-int8-weight-only.md  0004-m4-batching-server.md  0005-m5-stability-and-comparison.md
include/tlie/: error.hpp  kv_cache.hpp  model.hpp  model_config.hpp  operators.hpp  pinned_model.hpp  result.hpp  sha256.hpp  tokenizer.hpp  weight_store.hpp
include/tlie/cuda/: kernels.hpp  model.hpp  weight_store.hpp
scripts/: benchmark.py  benchmark_batch.py  benchmark_int8.py  benchmark_llamacpp.py  benchmark_pytorch.py  compare_engines.py  compare_int8.py  compare_logits.py  convert_model.py  convert_model_fp16.py  convert_model_int8.py  export_golden.py  export_operator_golden.py  export_tokenizer_golden.py  load_test.py  model_assets.py  openai_smoke_test.py  prepare_model.py  profile_cuda.py  run_cuda_memcheck.py  source_snapshot.py  sync_to_wsl.sh  tlie_format.py  wsl_cuda_env.py  wsl_cuda_ld_audit.c
src/: error.cpp  kv_cache.cpp  model.cpp  model_config.cpp  operators.cpp  sha256.cpp  tokenizer.cpp  weight_store.cpp
src/cuda/: kernels.cu  model.cu  weight_store.cpp
tests/: expect_cli_failure.cmake  m1_integration_tests.cpp  operator_tests.cpp  test_benchmark_int8.py  test_benchmark_report.py  test_compare_int8.py  test_compare_logits.py  test_int8_conversion.py  test_m5_runtime_contracts.py  test_m5_tools.py  test_profile_cuda.py  test_support.hpp  test_wsl_cuda_env.py  tokenizer_tests.cpp  unit_tests.cpp
tests/cuda/: kernel_tests.cu
tests/fixtures/: config.json
